external-crates/move/crates/move-compiler/tests/move_check/parser/invalid_pack_mname_non_addr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:4:14
  │
4 │         false::M::S { }
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:8:9
  │
8 │         fun bar()::bar()::M::S { }
  │         ^^^
  │         │
  │         Unexpected 'fun'
  │         Expected an expression term

error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:8:13
  │
7 │     fun bar() {
  │         --- Alias previously defined here
8 │         fun bar()::bar()::M::S { }
  │             ^^^ Duplicate module member or alias 'bar'. Top level names in a namespace must be unique

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:8:18
  │
8 │         fun bar()::bar()::M::S { }
  │                  ^^
  │                  │
  │                  Unexpected '::'
  │                  Expected '{'

